added new asserts for articles

--- a/_posts/2020-12-31-nivana.md
+++ b/_posts/2020-12-31-nivana.md
@@ -2,8 +2,8 @@
 layout: post
 title:  "නිවන ?"
 author: upsal
-categories: [ Buddhism, Mind ]
-tags: [ Buddhism, Kamma, Universe, Gravity ]
+categories: [ Buddhism ]
+tags: [ Buddhism, Nibbana ]
 image: "https://raw.githubusercontent.com/scienciax/sciencia/master/assets/images/posts/upsal/niwana.jpg"
 ---
 
